--- a/index.html
+++ b/index.html
@@ -15,7 +15,27 @@
   </head>
   <body>
     <div class="container">
-      <h1>Hello World</h1>
+      <h1>Buffalo</h1>
+      <ul>
+        <li>Friday 05:00</li>
+        <li>Clear</li>
+      </ul>
+      <div class="row">
+        <div class="col-md-6">
+          <img
+            src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+            alt="Clear"
+          />
+          12°C | °F
+        </div>
+        <div class="col-md-6">
+          <ul>
+            <li>Precipitation: 0%</li>
+            <li>Humidity: 73%</li>
+            <li>Wind: 2 km/h</li>
+          </ul>
+        </div>
+      </div>
       <a href="" class="btn btn-primary">Click Me</a>
     </div>
     <script src="src/app.js"></script>
