--- a/index.html
+++ b/index.html
@@ -15,29 +15,44 @@
   </head>
   <body>
     <div class="container">
-      <div class="weather-app">
-        <h1>Buffalo</h1>
-        <ul>
-          <li>Friday 05:00</li>
-          <li>Clear</li>
-        </ul>
-        <div class="row">
-          <div class="col-6">
-            <img
-              src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
-              alt="Clear"
+      <div class="wrapper">
+        <div class="weather-app">
+          <h1>Buffalo</h1>
+          <h6 id="current-date">Friday 05:00</br>
+            Clear
+            </h6>
+          </h6>
+         
+          <div class="row">
+            <div class="col-6">
+              <img
+                src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+                alt="Clear"
+              />
+              12°C | °F
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>Precipitation: 0%</li>
+                <li>Humidity: 73%</li>
+                <li>Wind: 2 km/h</li>
+              </ul>
+            </div>
+          </div>
+          <form class="row">
+            <input
+              type="text"
+              name="place"
+              placeholder="Enter a new place..."
+              class="searchbox"
+              id="search-text-input"
             />
-            12°C | °F
-          </div>
-          <div class="col-6">
-            <ul>
-              <li>Precipitation: 0%</li>
-              <li>Humidity: 73%</li>
-              <li>Wind: 2 km/h</li>
-            </ul>
-          </div>
+            <button type="submit" class="search" id="submitButton">
+              Search🔍
+            </button>
+          </form>
         </div>
-        <a href="" class="btn btn-primary">Click Me</a>
+
         <small>
           <a href="https://github.com/mpjaniga/weather-app" target="blank"
             >Open-source code, </a
@@ -45,6 +60,6 @@
         </small>
       </div>
     </div>
-    <script src="src/app.js"></script>
+    <script src="./src/app.js"></script>
   </body>
 </html>
