--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
     <link rel="stylesheet" href="src/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -18,12 +20,11 @@
       <div class="wrapper">
         <div class="weather-app">
           <div class="overview">
-            <h1>Buffalo</h1>
-            <h6 id="current-date">
-              Friday 05:00
-              <br />
-              Clear
-            </h6>
+            <h1 id="city"></h1>
+            <ul>
+              <li>Friday 05:00</li>
+              <li id="description"></li>
+            </ul>
           </div>
           <div class="row">
             <div class="col-6">
@@ -34,8 +35,7 @@
                   class="float-left"
                 />
                 <div class="float-left">
-                  <strong
-                    >12
+                  <strong id="temperature">
                     <span class="units">°C | <a href="#">°F</a></span>
                   </strong>
                 </div>
@@ -43,9 +43,8 @@
             </div>
             <div class="col-6">
               <ul>
-                <li>Precipitation: 0%</li>
-                <li>Humidity: 73%</li>
-                <li>Wind: 2 km/h</li>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span>km/h</li>
               </ul>
             </div>
           </div>
