Added relevant icon

--- a/index.html
+++ b/index.html
@@ -29,11 +29,7 @@
           <div class="row">
             <div class="col-6">
               <div class="clearfix weather-temperature">
-                <img
-                  src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
-                  alt="Clear"
-                  class="float-left"
-                />
+                <img src="" alt="Clear" id="icon" class="float-left" />
                 <div class="float-left">
                   <strong id="temperature">
                     <span class="units">°C | <a href="#">°F</a></span>
@@ -48,18 +44,6 @@
               </ul>
             </div>
           </div>
-          <form class="row">
-            <input
-              type="text"
-              name="place"
-              placeholder="Enter a new place..."
-              class="searchbox"
-              id="search-text-input"
-            />
-            <button type="submit" class="search" id="submitButton">
-              Search🔍
-            </button>
-          </form>
         </div>
 
         <small>
