--- a/index.html
+++ b/index.html
@@ -44,13 +44,32 @@
               </ul>
             </div>
           </div>
+          <form id="search-form" class="mt-3">
+            <div class="row">
+              <div class="col-10">
+                <input
+                  type="search"
+                  placeholder="Type a city..."
+                  class="form-control"
+                  id="city-input"
+                  autocomplete="off"
+                />
+              </div>
+              <div class="col-2">
+                <input
+                  type="submit"
+                  value="Search"
+                  class="btn btn-primary w-100"
+                />
+              </div>
+            </div>
+          </form>
+          <small>
+            <a href="https://github.com/mpjaniga/weather-app" target="blank"
+              >Open-source code, </a
+            >by Melanie Janiga
+          </small>
         </div>
-
-        <small>
-          <a href="https://github.com/mpjaniga/weather-app" target="blank"
-            >Open-source code, </a
-          >by Melanie Janiga
-        </small>
       </div>
     </div>
     <script src="./src/app.js"></script>
