--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     />
     <title>Weather App</title>
   </head>
-  <body>
+  <body class="background">
     <div class="container">
       <div class="wrapper">
         <div class="weather-app">
           <div class="overview">
             <h1 id="city"></h1>
-            <ul>
+            <ul class="margin-left">
               <li>Last update: <span id="date"></span></li>
               <li id="description"></li>
             </ul>
@@ -42,7 +42,7 @@
             <div class="col-6">
               <ul>
                 <li>Humidity: <span id="humidity"></span>%</li>
-                <li>Wind: <span id="wind"></span>km/h</li>
+                <li>Wind: <span id="wind"></span> km/h</li>
               </ul>
             </div>
           </div>
@@ -68,8 +68,8 @@
           </form>
           <small>
             <a href="https://github.com/mpjaniga/weather-app" target="blank"
-              >Open-source code, </a
-            >by Melanie Janiga
+              >Open-source code</a
+            >, by Melanie Janiga
           </small>
         </div>
       </div>
