--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
             <a href="https://github.com/mpjaniga/weather-app" target="blank"
               >Open-source code</a
             >, by Melanie Janiga
+            <br />
+            <a href="https://github.com/mpjaniga/weather-app">GitHub Link</a>
           </small>
         </div>
       </div>
