--- a/index.html
+++ b/index.html
@@ -45,6 +45,20 @@
                 <li>Wind: <span id="wind"></span> km/h</li>
               </ul>
             </div>
+            <div class="weather-forecast">
+              <div class="row-5">
+                <div class="col-2">
+                  <div class="weather-forecast-date">Thu</div>
+                  <img
+                    src="http://openweathermap.org/img/wn/04n@2x.png"
+                    alt=""
+                    width="42"
+                  />
+                  <div class="weather-forecast-temp"></div>
+                  <span class ="weather-forecast-max">18°</span><span class="weather-forecast-min"> 12°</span></div>
+                </div>
+              </div>
+            </div>
           </div>
           <form id="search-form" class="mt-3">
             <div class="row">
@@ -57,6 +71,7 @@
                   autocomplete="off"
                 />
               </div>
+
               <div class="col-2">
                 <input
                   type="submit"
