added forecast function

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 <li>Wind: <span id="wind"></span> km/h</li>
               </ul>
             </div>
-            <div class="weather-forecast">
-              <div class="row-5">
+            <div class="weather-forecast" id="forecast">
+              <div class="row">
                 <div class="col-2">
                   <div class="weather-forecast-date">Thu</div>
                   <img
@@ -54,8 +54,10 @@
                     alt=""
                     width="42"
                   />
-                  <div class="weather-forecast-temp"></div>
-                  <span class ="weather-forecast-max">18°</span><span class="weather-forecast-min"> 12°</span></div>
+                  <div class="weather-forecast-temp">
+                    <span class="weather-forecast-max"> 18° </span>
+                    <span class="weather-forecast-min"> 12° </span>
+                  </div>
                 </div>
               </div>
             </div>
@@ -71,7 +73,6 @@
                   autocomplete="off"
                 />
               </div>
-
               <div class="col-2">
                 <input
                   type="submit"
